# ssd_mobilenet

./: .gitattributes  .gitignore  CMakeLists.txt  INIReader.h  Makefile  README.md  capture.cpp  capture.h  cplibs.sh  deploy.sh  do_test.sh  gentest.cpp  go_test.sh  main.cpp  main_functions.cpp  main_functions.h  main_functions_reference.cpp  model_settings.cpp  model_settings.h  models.ini  mstick.cpp  nms.cpp  nms.h  request_params.cpp  request_params.h  ssd_mobilenet_v3.service  test-image.h  util.h
.github/workflows/: ci.yml
deploy/: yolov4-416-fp32-2
deploy/ssd_mobilenet_v3_large_coco_2020_01_14/: model.tflite
deploy/ssd_mobilenet_v3_small_coco_2020_01_14/: model.tflite
deploy/ssdlite_mobiledet_cpu_320x320_coco_2020_05_19/: model.tflite
deploy/yolov3-416-int8/: model.tflite
tests/: crop_params_test.cpp  generate_golden.sh  nms_golden_test.cpp
tests/golden/: nms_case1.json  nms_case2.json
yolov3-tiny-416-int8/: model.tflite
yolov4-416-fp16/: model.tflite
yolov4-416-fp32/: model.tflite
